history and calendar works

--- a/retrain_model.ipynb
+++ b/retrain_model.ipynb
@@ -2,17 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import oandapyV20 as op"
+    "import datetime as dt\n",
+    "\n",
+    "from oandapyV20 import API\n",
+    "from oandapyV20.contrib.factories import InstrumentsCandlesFactory\n",
+    "import oandapyV20.endpoints.forexlabs as labs\n",
+    "# https://media.readthedocs.org/pdf/oanda-api-v20/latest/oanda-api-v20.pdf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,23 +26,279 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hist(api, instrument, start_days, end_days, granularity):\n",
+    "\n",
+    "    start_date = (dt.datetime.now()-dt.timedelta(days=start_days)).strftime('%Y-%m-%dT%H:%M:%SZ')\n",
+    "    end_date = (dt.datetime.now()-dt.timedelta(days=end_days, hours=2,minutes=4)).strftime('%Y-%m-%dT%H:%M:%SZ')\n",
+    "\n",
+    "    params ={\n",
+    "                \"from\": start_date,\n",
+    "                \"to\": end_date,\n",
+    "                \"granularity\":granularity,\n",
+    "            }\n",
+    "\n",
+    "    df_list = []\n",
+    "    for r in InstrumentsCandlesFactory(instrument=instrument,params=params):\n",
+    "        api.request(r)\n",
+    "        df = pd.DataFrame(r.response['candles'])\n",
+    "        if(df.empty==False):\n",
+    "            time = df['time']\n",
+    "            volume = pd.DataFrame(df['volume'].apply(pd.Series))\n",
+    "            df = pd.DataFrame(df['mid'].apply(pd.Series))\n",
+    "            df = pd.concat([df,time,volume], axis=1)\n",
+    "            df['time'] = pd.to_datetime(df['time'], format='%Y-%m-%dT%H:%M:%S.000000000Z')\n",
+    "            #df.set_index('time',inplace=True)\n",
+    "            df_list.append(df)\n",
+    "    \n",
+    "    final = pd.concat(df_list)\n",
+    "    \n",
+    "    names = {\n",
+    "        'o': 'open',\n",
+    "        'c': 'close',\n",
+    "        'h': 'high',\n",
+    "        'l': 'low',\n",
+    "        0: 'vol',\n",
+    "        'time': 'time',\n",
+    "    }\n",
+    "    new_names = []\n",
+    "    for column_name in final.columns:\n",
+    "        new_names.append(names[column_name])\n",
+    "    final.columns = new_names\n",
+    "    \n",
+    "    return final"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cal(client, instrument, perdiod):\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "    params = {\n",
+    "        \"instrument\": instrument,\n",
+    "        \"period\": perdiod\n",
+    "    }\n",
+    "    \n",
+    "    # PERIOD VALUES\n",
+    "    #3600 - 1 hour\n",
+    "    #43200 - 12 hours\n",
+    "    #86400 - 1 day\n",
+    "    #604800 - 1 week\n",
+    "    #2592000 - 1 month\n",
+    "    #7776000 - 3 months\n",
+    "    #15552000 - 6 months\n",
+    "    #31536000 - 1 year\n",
+    "    # http://developer.oanda.com/rest-live/forex-labs/\n",
+    "\n",
+    "    r = labs.Calendar(params=params)\n",
+    "    client.request(r)\n",
+    "    \n",
+    "    df = pd.DataFrame.from_dict(r.response, orient='columns')\n",
+    "    \n",
+    "    df['timestamp'] = pd.to_datetime(df['timestamp']*1000000000)\n",
+    "    df = df[['impact', 'timestamp']]\n",
+    "    df.columns = ['impact', 'time']\n",
+    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def merge(history, calendar):\n",
+    "    return pd.merge(history, calendar, left_on = 'time', right_on = 'time', how='outer')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calendar = cal(client, 'EUR_USD', 604800)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "history = hist(client, 'EUR_USD', 7, 0, 'M5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged = merge(history, calendar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>time</th>\n",
+       "      <th>vol</th>\n",
+       "      <th>impact</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>416</th>\n",
+       "      <td>1.13604</td>\n",
+       "      <td>1.13647</td>\n",
+       "      <td>1.13564</td>\n",
+       "      <td>1.13644</td>\n",
+       "      <td>2019-01-22 10:00:00</td>\n",
+       "      <td>279</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>417</th>\n",
+       "      <td>1.13604</td>\n",
+       "      <td>1.13647</td>\n",
+       "      <td>1.13564</td>\n",
+       "      <td>1.13644</td>\n",
+       "      <td>2019-01-22 10:00:00</td>\n",
+       "      <td>279</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>477</th>\n",
+       "      <td>1.13561</td>\n",
+       "      <td>1.13580</td>\n",
+       "      <td>1.13544</td>\n",
+       "      <td>1.13564</td>\n",
+       "      <td>2019-01-22 15:00:00</td>\n",
+       "      <td>165</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1016</th>\n",
+       "      <td>1.13440</td>\n",
+       "      <td>1.13450</td>\n",
+       "      <td>1.13414</td>\n",
+       "      <td>1.13423</td>\n",
+       "      <td>2019-01-24 11:45:00</td>\n",
+       "      <td>86</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1017</th>\n",
+       "      <td>1.13440</td>\n",
+       "      <td>1.13450</td>\n",
+       "      <td>1.13414</td>\n",
+       "      <td>1.13423</td>\n",
+       "      <td>2019-01-24 11:45:00</td>\n",
+       "      <td>86</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "<oandapyV20.oandapyV20.API at 0x1084d04a8>"
+       "         open     high      low    close                time  vol  impact\n",
+       "416   1.13604  1.13647  1.13564  1.13644 2019-01-22 10:00:00  279     3.0\n",
+       "417   1.13604  1.13647  1.13564  1.13644 2019-01-22 10:00:00  279     3.0\n",
+       "477   1.13561  1.13580  1.13544  1.13564 2019-01-22 15:00:00  165     2.0\n",
+       "1016  1.13440  1.13450  1.13414  1.13423 2019-01-24 11:45:00   86     3.0\n",
+       "1017  1.13440  1.13450  1.13414  1.13423 2019-01-24 11:45:00   86     3.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "client"
+    "# check the merge\n",
+    "merged[~merged['impact'].isna()].head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO\n",
+    "\n",
+    "# calendar - flag dangerous periods\n",
+    "# oanda lab - indicators\n",
+    "# ta - indicators\n",
+    "\n",
+    "# divide into smaller dataframes ???\n",
+    "\n",
+    "# for each learning period train model and check acc\n",
+    "# so if learning period is one week repeat process every day\n",
+    "\n",
+    "# pick the most stable and profitable model - not appliable kurwa xD\n",
+    "# how to measure success???\n",
+    "# if not profitable, change parameters - which ones???\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
