added one more notebook and changed logic a bit

--- a/retrain_model.ipynb
+++ b/retrain_model.ipynb
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1132,45 +1132,46 @@
     "    train_X = train_df.drop(['close', 'high', 'low', 'vol', 'impact', 'label_5', 'label_10', 'label_15','day_index'], axis=1).values\n",
     "    \n",
     "    test_df = final[final['day_index'] == (i + days_to_train)]\n",
-    "    test_Y = test_df['label_'+str(periods)].values.tolist()\n",
-    "    test_X = test_df.drop(['close', 'high', 'low', 'vol', 'impact', 'label_5', 'label_10', 'label_15','day_index'], axis=1).values\n",
-    "    \n",
-    "    \n",
-    "    clf = ExtraTreesClassifier(n_estimators=30)\n",
-    "    clf = clf.fit(train_X, train_Y)\n",
+    "    if not test_df.empty:\n",
+    "        test_Y = test_df['label_'+str(periods)].values.tolist()\n",
+    "        test_X = test_df.drop(['close', 'high', 'low', 'vol', 'impact', 'label_5', 'label_10', 'label_15','day_index'], axis=1).values\n",
     "\n",
-    "    # pick only those features (technical indicators) which hase at least mean influence on y label\n",
-    "    model = SelectFromModel(clf, prefit=True, threshold=\"mean\")\n",
-    "    \n",
-    "    train_X = train_X[:, model.get_support()]\n",
-    "    test_X = test_X[:, model.get_support()]\n",
-    "    \n",
-    "    for criterion in ['entropy','gini']:\n",
-    "        for max_depth in [4,6,8,10]:\n",
-    "            for min_samples_leaf in [10, 25, 50, 100]:\n",
-    "                clf = tree.DecisionTreeClassifier(criterion=criterion,\n",
-    "                                     max_depth=max_depth,\n",
-    "                                     min_samples_leaf=min_samples_leaf)\n",
-    "                clf.fit(train_X, train_Y)\n",
-    "                score = clf.score(test_X, test_Y)\n",
-    "                pred_Y = clf.predict(test_X)\n",
     "\n",
-    "                row = []\n",
-    "                row.append(i)\n",
-    "                row.append(score)\n",
-    "                row.append(criterion)\n",
-    "                row.append(max_depth)\n",
-    "                row.append(min_samples_leaf)\n",
-    "                row.append(clf)\n",
-    "                row.append(pred_Y)\n",
-    "                df_list.append(row)\n",
+    "        clf = ExtraTreesClassifier(n_estimators=30)\n",
+    "        clf = clf.fit(train_X, train_Y)\n",
+    "\n",
+    "        # pick only those features (technical indicators) which hase at least mean influence on y label\n",
+    "        model = SelectFromModel(clf, prefit=True, threshold=\"mean\")\n",
+    "\n",
+    "        train_X = train_X[:, model.get_support()]\n",
+    "        test_X = test_X[:, model.get_support()]\n",
+    "\n",
+    "        for criterion in ['entropy','gini']:\n",
+    "            for max_depth in [4,6,8,10]:\n",
+    "                for min_samples_leaf in [10, 25, 50, 100]:\n",
+    "                    clf = tree.DecisionTreeClassifier(criterion=criterion,\n",
+    "                                         max_depth=max_depth,\n",
+    "                                         min_samples_leaf=min_samples_leaf)\n",
+    "                    clf.fit(train_X, train_Y)\n",
+    "                    score = clf.score(test_X, test_Y)\n",
+    "                    pred_Y = clf.predict(test_X)\n",
+    "\n",
+    "                    row = []\n",
+    "                    row.append(i)\n",
+    "                    row.append(score)\n",
+    "                    row.append(criterion)\n",
+    "                    row.append(max_depth)\n",
+    "                    row.append(min_samples_leaf)\n",
+    "                    row.append(clf)\n",
+    "                    row.append(pred_Y)\n",
+    "                    df_list.append(row)\n",
     "    \n",
     "    #break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1180,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1189,6 +1190,13 @@
     "    .sort_values('score', ascending=False)\\\n",
     "    [['score']]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
