File structure changed, added book strategy (almost complete), lets try to move with new file structure to cloud

--- a/book/order_book and position_book.ipynb
+++ b/book/order_book and position_book.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {}
+   },
    "outputs": [],
    "source": [
     "import requests\n",
@@ -15,16 +17,20 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {}
+   },
    "outputs": [],
    "source": [
-    "key = '3cf916fab91f55a904250b95078a6851-27cefccf52cf1a0aead8d8385376e890'"
+    "key = 'f8599fa0624567b98d6293acc87489bb-e288ec05b46b6e3d0bc753e6a2fbab48'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "pycharm": {}
+   },
    "outputs": [],
    "source": [
     "def dataGenerator(typ, start, end):\n",
@@ -52,8 +58,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "pycharm": {}
+   },
    "outputs": [],
    "source": [
     "def processRecord(response, typ):\n",
@@ -119,8 +127,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "pycharm": {}
+   },
    "outputs": [],
    "source": [
     "def getInstrumentStats(response, typ):\n",
@@ -139,30 +149,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'errorMessage': 'The snapshot for EUR_USD does not exist at the given time 2019-03-15T22:40:00Z.'}\n",
-      "{'errorMessage': 'The snapshot for EUR_USD does not exist at the given time 2019-03-15T23:00:00Z.'}\n",
-      "{'errorMessage': 'The snapshot for EUR_USD does not exist at the given time 2019-03-15T23:20:00Z.'}\n",
-      "{'errorMessage': 'The snapshot for EUR_USD does not exist at the given time 2019-03-15T23:40:00Z.'}\n",
-      "{'errorMessage': 'The snapshot for EUR_USD does not exist at the given time 2019-03-16T00:00:00Z.'}\n",
-      "{'errorMessage': 'The snapshot for EUR_USD does not exist at the given time 2019-03-22T23:20:00Z.'}\n",
-      "{'errorMessage': 'The snapshot for EUR_USD does not exist at the given time 2019-03-22T23:40:00Z.'}\n",
-      "{'errorMessage': 'The snapshot for EUR_USD does not exist at the given time 2019-03-23T00:00:00Z.'}\n",
-      "{'errorMessage': 'The snapshot for EUR_USD does not exist at the given time 2019-03-23T00:20:00Z.'}\n",
-      "{'errorMessage': 'The snapshot for EUR_USD does not exist at the given time 2019-03-23T00:40:00Z.'}\n",
-      "{'errorMessage': 'The snapshot for EUR_USD does not exist at the given time 2019-03-23T01:00:00Z.'}\n",
-      "{'errorMessage': 'The snapshot for EUR_USD does not exist at the given time 2019-03-23T01:20:00Z.'}\n",
-      "{'errorMessage': 'The snapshot for EUR_USD does not exist at the given time 2019-03-23T01:40:00Z.'}\n",
-      "{'errorMessage': 'The snapshot for EUR_USD does not exist at the given time 2019-03-23T02:00:00Z.'}\n"
-     ]
-    }
-   ],
+   "execution_count": 6,
+   "metadata": {
+    "pycharm": {}
+   },
+   "outputs": [],
    "source": [
     "priceRange = None\n",
     "df_list = []\n",
@@ -178,13 +169,51 @@
     "        df_list.append(row)\n",
     "        \n",
     "    else:\n",
-    "        print(response)"
+    "        print(response)\n",
+    "        \n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "metadata": false,
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "chuj = 0\n",
+    "\n",
+    "for a in response['positionBook']['buckets']:\n",
+    "    chuj = chuj + float(a['longCountPercent']) + float(a['shortCountPercent'])\n",
+    "    \n",
+    "print(chuj)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "metadata": false,
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "response['positionBook']['buckets']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {}
+   },
    "outputs": [],
    "source": [
     "df = pd.DataFrame(df_list, columns = [\n",
@@ -219,7 +248,9 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {}
+   },
    "outputs": [],
    "source": [
     "df.to_csv('march.csv')"
@@ -228,14 +259,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {}
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {}
+   },
    "outputs": [],
    "source": [
     "data = {\n",
@@ -249,7 +284,9 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {}
+   },
    "outputs": [],
    "source": [
     "df_list = []\n",
@@ -291,7 +328,9 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {}
+   },
    "outputs": [],
    "source": [
     "orders_tmp = pd.read_csv('order_book/january.csv')"
@@ -300,7 +339,9 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {}
+   },
    "outputs": [
     {
      "data": {
@@ -404,7 +445,9 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {}
+   },
    "outputs": [
     {
      "data": {
@@ -2411,21 +2454,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {}
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {}
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {}
+   },
    "outputs": [],
    "source": [
     "def get_OrderBook(typ):\n",
@@ -2562,7 +2611,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {}
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2579,7 +2630,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {}
+   },
    "outputs": [
     {
      "data": {
@@ -2651,7 +2704,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {}
+   },
    "outputs": [],
    "source": [
     "jan.to_csv('march.csv')"
@@ -2660,14 +2715,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {}
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {}
+   },
    "outputs": [],
    "source": []
   }
